# filburbot

filburbot_base/: .gitignore  CMakeLists.txt  package.xml
filburbot_base/firmware/: filburbot_arduino.ino
filburbot_base/firmware/filburbot_arduino/: .gitignore  filburbot_arduino.ino
filburbot_base/include/filburbot_base/: filburbot_hardware.h
filburbot_base/launch/: base.launch
filburbot_base/src/: filburbot_base.cpp  filburbot_hardware.cpp
filburbot_base/system/: base.sh  ds4.service  filburbot-base.service
filburbot_bringup/: CMakeLists.txt  package.xml
filburbot_bringup/config/: teleop_ds4.yaml  teleop_power_a.yaml
filburbot_bringup/launch/: lidar.launch  teleop.launch
filburbot_control/: CMakeLists.txt  package.xml
filburbot_control/config/: diff_drive_controller_params.yaml
filburbot_control/launch/: control.launch
filburbot_description/: CMakeLists.txt  package.xml
filburbot_description/launch/: description.launch  display.launch  filburbot.rviz
filburbot_description/urdf/: filburbot.xacro
filburbot_msgs/: CMakeLists.txt  package.xml
filburbot_msgs/msg/: Encoders.msg
filburbot_navigation/: CMakeLists.txt  package.xml
filburbot_navigation/config/: amcl.yaml  costmap_common.yaml  gmapping.yaml  move_base.yaml  planner.yaml
filburbot_navigation/launch/: build_map.launch  gmapping.launch  gmapping_demo.launch  move_base.launch  nav.launch
