<?xml version="1.0"?>
<package format="2">
  <name>filburbot_base</name>
  <version>0.0.0</version>
  <description>The filburbot_base package</description>

  <maintainer email="rangeli93@gmail.com">Ricardo Angeli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
  </export>
</package>
