<?xml version="1.0"?>
<package format="2">
  <name>filburbot_bringup</name>
  <version>0.0.0</version>
  <description>The filburbot_bringup package</description>

  <maintainer email="rangeli93@gmail.com">Ricardo Angeli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>xv_11_laser_driver</exec_depend>

  <export>
  </export>
</package>
