<?xml version="1.0"?>
<package format="2">
  <name>filburbot_control</name>
  <version>0.0.0</version>
  <description>The filburbot_control package</description>

  <maintainer email="rangeli93@gmail.com">Ricardo Angeli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
