<?xml version="1.0"?>
<package format="2">
  <name>filburbot_navigation</name>
  <version>0.0.0</version>
  <description>The filburbot_navigation package</description>

  <maintainer email="rangeli93@gmail.com">Ricardo Angeli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

  <export>
  </export>
</package>
